ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: myingress
spec:
  rules:
  - host: blog.bestofcreativity.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bloggin-service
            port:
              number: 80
    
  - host: php.bestofcreativity.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  tls:
  - hosts:
    - blog.bestofcreativity.online
    - php.bestofcreativity.online
    secretName: myapp-tls
