myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    meta.helm.sh/release-name: "myapp"
    meta.helm.sh/release-namespace: "default"
  labels:
    name: myingress
    app.kubernetes.io/managed-by: "Helm"
spec:
  rules:
  - host: blog.bestofcreativity.online
    http:
      paths:
      - backend:
          service:
            name: bloggin-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: php.bestofcreativity.online
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - blog.bestofcreativity.online
    - php.bestofcreativity.online
    secretName: myapp-tls
